- Added SparseEA. - Adapted HybridMOCell, HybridNSGAII, HybridSMSEMOA and HybridSparseEA.